k8s/revestapp.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: revest-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: revest
  template:
    metadata:
      labels:
        app: revest
    spec:
      containers:
        - name: revest
          image: 888577027777.dkr.ecr.ap-south-1.amazonaws.com/dev/revest:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: ecr-creds
---
apiVersion: v1
kind: Service
metadata:
  name: revest-service
spec:
  selector:
    app: revest
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
